# libGearBox

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.6c66865  Doxyfile.in  LICENSE  README.md  index.md
cmake/: ClangFormat.cmake  ConfigureTarget.cmake  Documentation.cmake  LinuxConfig.cmake  TestCompilerSupport.cmake  WindowsConfig.cmake  macOSConfig.cmake
docs/: Doxyfile.in  mainpage.dox
include/: libgearbox_config.h.in  libgearbox_error.h  libgearbox_file.h  libgearbox_folder.h  libgearbox_global.h  libgearbox_return_type.h  libgearbox_session.h  libgearbox_torrent.h  librt_error.h  librt_torrent.h
pub/: librt_error.h  librt_file.h  librt_folder.h  librt_global.h  librt_return_type.h  librt_session.h  librt_torrent.h
src/: libgearbox_common.cpp  libgearbox_error.cpp  libgearbox_file.cpp  libgearbox_folder.cpp  libgearbox_http_interface.cpp  libgearbox_http_linux.cpp  libgearbox_http_macos.cpp  libgearbox_http_uwp.cpp  libgearbox_http_win.cpp  libgearbox_return_type.cpp  libgearbox_session.cpp  libgearbox_torrent.cpp  librt_common.cpp  librt_error.cpp  librt_file.cpp  librt_folder.cpp  librt_http_linux.cpp  librt_http_macos.cpp  librt_http_win.cpp  librt_session.cpp  librt_torrent.cpp
src/inc/: librt_file_p.h  librt_folder_p.h  librt_http_interface_p.h  librt_http_linux_p.h  librt_http_win_p.h  librt_logger_p.h  librt_session_p.h  librt_torrent_p.h  librt_vla_p.h
src/include/: libgearbox_common_p.h  libgearbox_file_p.h  libgearbox_folder_p.h  libgearbox_http_interface_p.h  libgearbox_http_linux_p.h  libgearbox_http_macos_p.h  libgearbox_http_uwp_p.h  libgearbox_http_win_p.h  libgearbox_logger_p.h  libgearbox_mimetypes.h  libgearbox_mimetypes_p.h  libgearbox_session_p.h  libgearbox_torrent_p.h  libgearbox_vla_p.h  librt_common_p.h  librt_http_win_p.h  librt_vla_p.h
tests/: CMakeLists.txt  package.appxmanifest.in
tests/cmake/: Coverage.cmake  Platform.cmake  Python.cmake  PythonConfig.cmake  Resources.cmake
tests/python/: main.py  server.py  switch.py
tests/python/json/: recently_active.json  stats.json  torrents.json
tests/src/: http_server.cpp  main.cpp  test_common_p.cpp  test_error.cpp  test_file.cpp  test_folder.cpp  test_http_implementation.cpp  test_http_interface.cpp  test_http_linux.cpp  test_http_macos.cpp  test_http_uwp.cpp  test_http_win.cpp  test_session.cpp  test_torrent.cpp
tests/src/include/: http_server.h
